--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,9 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1><span class="text-gradient">4Pics-1Word</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			4 pics 1 word is a clone game made by Richi Coder
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
