--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Header from '../components/Header.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<Header />
 		<h1><span class="text-gradient">4Pics-1Word</span></h1>
 		<p class="instructions">
 			4 pics 1 word is a clone game made by Richi Coder
@@ -26,9 +28,9 @@ import Card from '../components/Card.astro';
 				body="Explore a galaxy of community-built starter themes."
 			/>
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="/game"
+				title="GAME"
+				body="GO GAMING ❤️"
 			/>
 		</ul>
 	</main>
