--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,10 +8,10 @@
                 <a href="/">Home</a>
             </li>
             <li>
-                <a href="game">Game</a>
+                <a href="/game/">Game</a>
             </li>
             <li>
-                <a href="about">About</a>
+                <a href="/about/">About</a>
             </li>
         </ul>
     </nav>
