--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,25 +5,67 @@ import Header from '../components/Header.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<Header />
-		<h1><span class="text-gradient">4Pics-1Word</span></h1>
+	<main style={{height: "100vh"}}>
+		{/* <Header /> 
+		<h1><span class="text-gradient">4Pics-1Word</span></h1> 
 		<p class="instructions">
 			4 pics 1 word is a clone game made by Richi Coder
 		</p>
-		<ul role="list" class="link-card-grid">
+		*/ }
+
+		<section class="bg-gray-900 text-white section">
+				<div
+				  class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
+				>
+				  <div class="mx-auto max-w-3xl text-center">
+					<h1
+					  class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl"
+					>
+					  4 Pics 1 Word
+			  
+					</h1>
+			  
+					<p class="mx-auto mt-4 max-w-xl sm:text-xl sm:leading-relaxed">
+					  This is a clone game made by Richi Coder
+					</p>
+			  
+					<div class="mt-8 flex flex-wrap justify-center gap-4">
+					  <a
+						class="block w-full rounded border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-white focus:outline-none focus:ring active:text-opacity-75 sm:w-auto"
+						href="/game"
+					  >
+						PLAY
+					  </a>
+			  
+					  <a
+						class="block w-full rounded border border-blue-600 px-12 py-3 text-sm font-medium text-white hover:bg-blue-600 focus:outline-none focus:ring active:bg-blue-500 sm:w-auto"
+						href="/about"
+					  >
+						Learn More
+					  </a>
+					</div>
+				  </div>
+				</div>
+			  </section>
+
+			  {/* 
+		<ul role="list" class="link-card-grid"> 
+
+			
+			  
+			  
 			<Card
-				href="https://docs.astro.build/"
+				href="/about/"
 				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				body="Learn how this game works!"
 			/>
 			<Card
-				href="https://astro.build/integrations/"
+				href="#"
 				title="Integrations"
 				body="Supercharge your project with new frameworks and libraries."
 			/>
 			<Card
-				href="https://astro.build/themes/"
+				href="#"
 				title="Themes"
 				body="Explore a galaxy of community-built starter themes."
 			/>
@@ -33,14 +75,16 @@ import Header from '../components/Header.astro';
 				body="GO GAMING ❤️"
 			/>
 		</ul>
+		*/}
 	</main>
 </Layout>
 
 <style>
 	main {
 		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
+		padding: 0;
+		max-width: 100%;
+		height: 100%;
 	}
 	h1 {
 		font-size: 3rem;
@@ -78,5 +122,8 @@ import Header from '../components/Header.astro';
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 1rem;
 		padding: 0;
+	}
+	.section {
+		height: 100%;
 	}
 </style>
