--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,12 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="ABOUT">
-    <Header />
+    <div class="bg-indigo-500 px-4 py-3 text-white">
+        <p class="text-center text-sm font-medium">
+          You think this app game should be officially launched?
+          <a href="/launch" class="inline-block underline">Please, click here if you agree!</a>
+        </p>
+      </div>
+      <Header />
     <div>ABOUT PAGE</div>
 </Layout>
