--- a/src/components/styles/square.css
+++ b/src/components/styles/square.css
@@ -8,7 +8,7 @@
     height: 7vw;
     border-radius: 5px;
     box-shadow: 0px 0px 7px white;
-    color: white;
+    /* color: white; */
     text-align: center;
     margin: 0;
     padding: 0;
