--- a/src/pages/game.astro
+++ b/src/pages/game.astro
@@ -5,9 +5,10 @@ import App from "../components/App";
 ---
 
 <Layout title="4pics-1word">
-  <div class="flex flex-col items-center bg-gray-900 text-white w-full">
-    <Header />
-  <div>This page will contain the game!</div>
   <App client:load />
-  </div>
 </Layout>
+<style>
+  body {
+    overflow: clip;
+  }
+</style>
