--- a/src/components/styles/key.css
+++ b/src/components/styles/key.css
@@ -3,17 +3,30 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: gray;
-    width: 7vw;
-    height: 7vw;
-    border-radius: 5px;
+    background-color: rgb(172, 172, 172);
+    gap: 20px;
+    width: 15%;
+    border-radius: 10%;
     color: black;
     text-align: center;
-    margin: 0;
+    margin: 0.66% 0;
     padding: 0;
     outline: none;
     user-select: none;
     font-family: monospace;
     font-weight: bold;
     font-size: 2rem;
+    user-select: none;
+}
+
+button:hover {
+    background-color: white;
+}
+
+button:active {
+    background-color: rgb(17, 231, 46);
+}
+
+button:visited {
+    background-color: initial;
 }
