--- a/src/components/styles/square.css
+++ b/src/components/styles/square.css
@@ -1,14 +1,12 @@
-.square {
+button.square {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: black;
-    width: 7vw;
-    height: 7vw;
-    border-radius: 5px;
+    width: 9%;
+    border-radius: 10%;
     box-shadow: 0px 0px 7px white;
-    /* color: white; */
     text-align: center;
     margin: 0;
     padding: 0;
@@ -16,5 +14,22 @@
     user-select: none;
     font-family: monospace;
     font-weight: bold;
-    font-size: 2rem;
+    user-select: none;
+    font-family: sans-serif;
+}
+
+button.square:active, button.square:hover, button.square:focus, button.square:visited {
+    background-color: black;
+}
+
+@media only screen and (min-aspect-ratio: 1.5) {
+    .square {
+        font-size: 350%;
+    }
+}
+
+@media only screen and (max-aspect-ratio: 1.5) {
+    .square {
+        font-size: 150%;
+    }
 }
