--- a/src/pages/game.astro
+++ b/src/pages/game.astro
@@ -8,6 +8,9 @@ import App from "../components/App";
   <App client:load />
 </Layout>
 <style>
+  html {
+    background-color: rgb(17,24,39);
+  }
   body {
     overflow: clip;
   }
