--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
+import Presentational from '../components/Presentational';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -21,6 +22,8 @@ import Header from '../components/Header.astro';
 					<p class="mx-auto mt-4 max-w-xl sm:text-xl sm:leading-relaxed">
 					  This is a clone game made by Richi Coder
 					</p>
+					
+					<!-- <Presentational /> -->
 			  
 					<div class="mt-8 flex flex-wrap justify-center gap-4">
 					  <a
