--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -1,4 +1,17 @@
 .dashboard {
     gap: 1%;
-    z-index: 55;
+    z-index: 65;
 }
+
+@media only screen and (min-aspect-ratio: 1.5) {
+    .dashboard {
+        z-index: 55;
+    }
+}
+
+@media only screen and (max-aspect-ratio: 1.5) {
+    .dashboard {
+        z-index: 65;
+    }
+}
+
