--- a/src/components/styles/nextchallenge.css
+++ b/src/components/styles/nextchallenge.css
@@ -1,12 +1,30 @@
+@media all and (display-mode: browser) and (max-width: 600px) {
+    .next-button:hover {
+        color: black;
+        transition: all .1s ease-in-out;
+        transform: scale(1.1,1.1);
+    }
+}
+
+.next-button:active {
+    text-shadow: 0 0 4vh white;
+    color: black;
+}
+
 @media only screen and (min-aspect-ratio: 1.5) {
     .next-button {
-        font-size: 5rem;
+        font-size: 10vh;
+        padding: 2vh 10vh;
+        border-radius: 3vh;
+        box-shadow: 0 0 2vh white;
     }
 }
 
 @media only screen and (max-aspect-ratio: 1.5) {
     .next-button {
-        font-size: 5rem;
-        aspect-ratio: 3 / 2;
+        font-size: 10vw;
+        padding: 2vw 10vw;
+        border-radius: 3vw;
+        box-shadow: 0 0 1vh white;
     }
 }
