WORKING UNTIL END, IMAGE LOADING REFINED

--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -6,12 +6,14 @@
 @media only screen and (min-aspect-ratio: 1.5) {
     .dashboard {
         z-index: 55;
+        align-items: end;
     }
 }
 
 @media only screen and (max-aspect-ratio: 1.5) {
     .dashboard {
         z-index: 65;
+        align-items: center;
     }
 }
 
