--- a/src/components/styles/nextchallenge.css
+++ b/src/components/styles/nextchallenge.css
@@ -26,5 +26,6 @@
         padding: 2vw 10vw;
         border-radius: 3vw;
         box-shadow: 0 0 1vh white;
+        margin-bottom: 10vh;
     }
 }
