--- a/src/components/styles/keyboard.css
+++ b/src/components/styles/keyboard.css
@@ -13,7 +13,7 @@
 @media only screen and (max-aspect-ratio: 1.5) {
     .keyboard-container {
         align-items: center;
-        justify-content: end;
-        padding-bottom: 3vh;
+        justify-content: center;
+        padding-bottom: 8vh;
     }
 }
