--- a/src/components/styles/key.css
+++ b/src/components/styles/key.css
@@ -30,3 +30,8 @@ button:active {
 button:visited {
     background-color: initial;
 }
+
+button.key:focus {
+    transform: scale(1.05,1.05);
+    border: 1vh solid white;
+}
