--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,6 +9,7 @@ import Layout from "../layouts/Layout.astro";
         <p class="text-center text-sm font-medium">
           You think this app game should be officially launched?
           <a href="/launch" class="inline-block underline">Please, click here if you agree!</a>
+          <a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by Good Ware - Flaticon</a>
         </p>
       </div>
       <Header />
