--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,12 +26,10 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
 		margin: 0;
 		padding: 0;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		margin: auto;
+		padding: auto;
+		overflow: clip;
 	}
 </style>
