--- a/src/components/styles/nextchallenge.css
+++ b/src/components/styles/nextchallenge.css
@@ -1,4 +1,4 @@
-@media all and (display-mode: browser) and (max-width: 600px) {
+@media all and (display-mode: browser) and (min-width: 600px) {
     .next-button:hover {
         color: black;
         transition: all .1s ease-in-out;
@@ -9,6 +9,13 @@
 .next-button:active {
     text-shadow: 0 0 4vh white;
     color: black;
+}
+.nextAnimated {
+    animation: nextAnimated 1.1s ease-in-out 1;
+}
+@keyframes nextAnimated {
+    50% {transform: scale(0.9,0.9);}
+    100% {transform: scale(1.2,1.2);}
 }
 
 @media only screen and (min-aspect-ratio: 1.5) {
