--- a/src/pages/game.astro
+++ b/src/pages/game.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 import App from "../components/App";
 ---
 
-<Layout title="4pics-1word">
+<Layout title="4pics-1word | Play">
   <App client:load />
 </Layout>
 <style>
