--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="4pics - 1 word / richiCoder">
+<Layout title="4pics-1 word | richiCoder">
 	<main>
 		<section class="text-white section">
 				<div
