--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Music from '../components/Music';
 ---
 
 <Layout title="4pics-1 word | richiCoder">
 	<main>
 		<section class="text-white section">
 				<div
-				  class="mx-auto max-w-screen-xl px-4 py-32 flex h-screen items-center presentation"
+				  id='presentation'
+				  class="mx-auto max-w-screen-xl px-4 py-32 flex h-screen items-center"
 				>
-				  <div class="mx-auto max-w-3xl text-center">
+				  <div id='first-show' class="mx-auto max-w-3xl text-center hidden">
 					<h1
 					  class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-8xl"
 					>
@@ -30,14 +32,12 @@ import Layout from '../layouts/Layout.astro';
 						PLAY
 					  </a>
 			  
-					  <!-- <a
-						class="block w-full rounded border border-blue-600 px-12 py-3 text-sm font-medium text-white hover:bg-blue-600 focus:outline-none focus:ring active:bg-blue-500 sm:w-auto"
-						href="/about"
-					  >
-						Learn More
-					  </a> -->
+					
+					  
 					</div>
+					
 				  </div>
+				  <Music client:load />
 				</div>
 			  </section>
 	</main>
