coins animation working well

--- a/src/components/styles/coins.css
+++ b/src/components/styles/coins.css
@@ -25,3 +25,12 @@
         margin-top: -2vw;
     }
 }
+
+.winnerCoin {
+    animation: showup 0.7s ease-in-out 1;
+}
+@keyframes showup {
+    0% {opacity: 0; transform: scale(0.7);}
+    50% {opacity: 1;}
+    70% {transform: scale(1.2);}
+}
